--- a/examples/us_bmode_phased_array/us_bmode_phased_array_from_ct.ipynb
+++ b/examples/us_bmode_phased_array/us_bmode_phased_array_from_ct.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 41,
       "metadata": {
         "id": "8xTi-tyFHGlx"
       },
@@ -33,7 +33,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 42,
       "metadata": {
         "id": "RIXUhlM1HGl7"
       },
@@ -88,7 +88,7 @@
       "metadata": {
         "id": "wuUJyL_4uebT"
       },
-      "execution_count": 30,
+      "execution_count": 43,
       "outputs": []
     },
     {
@@ -121,7 +121,7 @@
       "metadata": {
         "id": "0BzYqHaqiSdm"
       },
-      "execution_count": 31,
+      "execution_count": 44,
       "outputs": []
     },
     {
@@ -142,7 +142,7 @@
       "metadata": {
         "id": "PTN_madDjP3J"
       },
-      "execution_count": 32,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -179,21 +179,21 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "45453786-d5b5-4595-ddf4-fd53ed2bcbae"
+        "outputId": "226e4b02-1bea-4b40-b6a2-c7cfe281a910"
       },
-      "execution_count": 33,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(Vector([[0.00000000e+00, 1.94805195e-08, 3.89610390e-08, ...,\n",
-              "          4.94162338e-04, 4.94181818e-04, 4.94201299e-04]]),\n",
-              " Vector(1.94805195e-08))"
+              "(Vector([[0.00000000e+00, 1.36972416e-07, 2.73944831e-07, ...,\n",
+              "          4.93922531e-04, 4.94059503e-04, 4.94196475e-04]]),\n",
+              " Vector(1.36972416e-07))"
             ]
           },
           "metadata": {},
-          "execution_count": 33
+          "execution_count": 46
         }
       ]
     },
@@ -220,7 +220,7 @@
       "metadata": {
         "id": "7n8Xj2cOuWpJ"
       },
-      "execution_count": 34,
+      "execution_count": 47,
       "outputs": []
     },
     {
@@ -234,7 +234,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 48,
       "metadata": {
         "id": "l6ExjbPzHGmD"
       },
@@ -260,7 +260,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 49,
       "metadata": {
         "id": "d8d3FQfRHGmE"
       },
@@ -302,7 +302,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 50,
       "metadata": {
         "id": "eLrJHTKsHGmH"
       },
@@ -337,7 +337,7 @@
         "# define a random distribution of scatterers\n",
         "background_map_mean = 1\n",
         "background_map_std  = 0.008\n",
-        "background_map      = background_map_mean + background_map_std * np.random.randn(kgrid.Nx, kgrid.Ny)\n",
+        "background_map      = background_map_mean + background_map_std * np.random.randn(kgrid.Nx, kgrid.Ny, kgrid.Nz)\n",
         "\n",
         "sound_speed_map     = c0 * background_map\n",
         "density_map         = rho0 * background_map\n",
@@ -349,7 +349,7 @@
       "metadata": {
         "id": "fzfCU0br7-hH"
       },
-      "execution_count": 38,
+      "execution_count": 51,
       "outputs": []
     },
     {
@@ -386,9 +386,9 @@
         },
         "cellView": "code",
         "id": "XbDL2t278A_G",
-        "outputId": "2fc54d40-47d0-48b1-c4e8-25ee1fa23b4e"
+        "outputId": "1c9e0c93-30da-4951-af43-e4bee37adabb"
       },
-      "execution_count": 39,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -401,7 +401,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 39
+          "execution_count": 52
         }
       ]
     },
@@ -416,14 +416,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 53,
       "metadata": {
         "id": "VnNDQcw8HGmM",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 367
+          "height": 443
         },
-        "outputId": "8f426d5d-447e-4eab-c86d-8a2e572f4b36"
+        "outputId": "73a99ec0-8cfe-4a3f-b724-6095e4f4f481"
       },
       "outputs": [
         {
@@ -435,14 +435,20 @@
         },
         {
           "output_type": "error",
-          "ename": "BeartypeCallHintParamViolation",
-          "evalue": "Function kwave.kspaceFirstOrder2D.kspaceFirstOrder2D() parameter source=<kwave.ktransducer.NotATransducer object at 0x787661908690> violates type hint <class 'kwave.ksource.kSource'>, as <class \"kwave.ktransducer.NotATransducer\"> <kwave.ktransducer.NotATransducer object at 0x787661908690> not instance of <class \"kwave.ksource.kSource\">.",
+          "ename": "TypeError",
+          "evalue": "pad() missing 1 required positional argument: 'pad_width'",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mBeartypeCallHintParamViolation\u001b[0m            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-40-e5b94214ed8b>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m         \u001b[0;31m# RUN 2D K-WAVE SIMULATION\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 27\u001b[0;31m         sensor_data            = kspaceFirstOrder2D(\n\u001b[0m\u001b[1;32m     28\u001b[0m             \u001b[0mmedium\u001b[0m             \u001b[0;34m=\u001b[0m \u001b[0mdeepcopy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmedium\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m  \u001b[0;31m# Medium is altered in-place in this function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m             \u001b[0mkgrid\u001b[0m              \u001b[0;34m=\u001b[0m \u001b[0mkgrid\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<@beartype(kwave.kspaceFirstOrder2D.kspaceFirstOrder2D) at 0x787661a70a40>\u001b[0m in \u001b[0;36mkspaceFirstOrder2D\u001b[0;34m(__beartype_object_595702976, __beartype_get_violation, __beartype_conf, __beartype_object_602732160, __beartype_object_132450070265408, __beartype_object_600842608, __beartype_object_602673904, __beartype_object_601466096, __beartype_check_meta, __beartype_func, *args, **kwargs)\u001b[0m\n",
-            "\u001b[0;31mBeartypeCallHintParamViolation\u001b[0m: Function kwave.kspaceFirstOrder2D.kspaceFirstOrder2D() parameter source=<kwave.ktransducer.NotATransducer object at 0x787661908690> violates type hint <class 'kwave.ksource.kSource'>, as <class \"kwave.ktransducer.NotATransducer\"> <kwave.ktransducer.NotATransducer object at 0x787661908690> not instance of <class \"kwave.ksource.kSource\">."
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-53-a3440fba3054>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m         \u001b[0;31m# RUN 2D K-WAVE SIMULATION\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 27\u001b[0;31m         sensor_data            = kspaceFirstOrder3D(\n\u001b[0m\u001b[1;32m     28\u001b[0m             \u001b[0mmedium\u001b[0m             \u001b[0;34m=\u001b[0m \u001b[0mdeepcopy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmedium\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m  \u001b[0;31m# Medium is altered in-place in this function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m             \u001b[0mkgrid\u001b[0m              \u001b[0;34m=\u001b[0m \u001b[0mkgrid\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/kwave/kspaceFirstOrder3D.py\u001b[0m in \u001b[0;36mkspaceFirstOrder3D\u001b[0;34m(kgrid, source, sensor, medium, simulation_options, execution_options, time_rev)\u001b[0m\n\u001b[1;32m    207\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    208\u001b[0m     \u001b[0mk_sim\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mkWaveSimulation\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkgrid\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mkgrid\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msource\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msource\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msensor\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msensor\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmedium\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmedium\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msimulation_options\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msimulation_options\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 209\u001b[0;31m     \u001b[0mk_sim\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minput_checking\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"kspaceFirstOrder3D\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    210\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    211\u001b[0m     \u001b[0;31m# =========================================================================\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/kwave/kWaveSimulation.py\u001b[0m in \u001b[0;36minput_checking\u001b[0;34m(self, calling_func_name)\u001b[0m\n\u001b[1;32m    511\u001b[0m         \u001b[0mdisplay_simulation_params\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkgrid\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmedium\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mis_elastic_code\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    512\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 513\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msmooth_and_enlarge\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msource\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mk_dim\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mVector\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkgrid\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mN\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mopt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    514\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate_sensor_variables\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    515\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate_absorption_vars\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/kwave/kWaveSimulation.py\u001b[0m in \u001b[0;36msmooth_and_enlarge\u001b[0;34m(self, source, k_dim, kgrid_N, opt)\u001b[0m\n\u001b[1;32m   1250\u001b[0m         \u001b[0;31m# grid defined by the user\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1251\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mopt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpml_inside\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1252\u001b[0;31m             expand_results = expand_grid_matrices(\n\u001b[0m\u001b[1;32m   1253\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkgrid\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1254\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmedium\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/kwave/kWaveSimulation_helper/expand_grid_matrices.py\u001b[0m in \u001b[0;36mexpand_grid_matrices\u001b[0;34m(kgrid, medium, source, sensor, opt, values, flags)\u001b[0m\n\u001b[1;32m     50\u001b[0m     \u001b[0mrecord\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mexpand_cuboid_corner_list\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mflags\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcuboid_corners\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkgrid\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpml_size\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# noqa: F841\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     51\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 52\u001b[0;31m     \u001b[0mexpand_medium\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmedium\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexpand_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     53\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     54\u001b[0m     p_source_pos_index, u_source_pos_index, s_source_pos_index = expand_source(\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/kwave/kWaveSimulation_helper/expand_grid_matrices.py\u001b[0m in \u001b[0;36mexpand_medium\u001b[0;34m(medium, expand_size)\u001b[0m\n\u001b[1;32m    108\u001b[0m     \u001b[0mmedium\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msound_speed\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0matleast_1d\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmedium\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msound_speed\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    109\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mmedium\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msound_speed\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 110\u001b[0;31m         \u001b[0mmedium\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msound_speed\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mexpand_matrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmedium\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msound_speed\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexpand_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    111\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    112\u001b[0m     \u001b[0;31m# enlarge the grid of density by extending the edge values into the expanded grid\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<@beartype(kwave.utils.matrix.expand_matrix) at 0x787670f562a0>\u001b[0m in \u001b[0;36mexpand_matrix\u001b[0;34m(__beartype_object_132450070824704, __beartype_get_violation, __beartype_conf, __beartype_object_132450070831936, __beartype_object_132450070873808, __beartype_check_meta, __beartype_func, *args, **kwargs)\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/kwave/utils/matrix.py\u001b[0m in \u001b[0;36mexpand_matrix\u001b[0;34m(matrix, exp_coeff, edge_val)\u001b[0m\n\u001b[1;32m    154\u001b[0m             \u001b[0mopts\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"pad_width\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexp_coeff\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexp_coeff\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mexp_coeff\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexp_coeff\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mexp_coeff\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexp_coeff\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    155\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 156\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmatrix\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mopts\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    157\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    158\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: pad() missing 1 required positional argument: 'pad_width'"
           ]
         }
       ],
